--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 }
 
 .card:hover {
@@ -286,14 +287,14 @@ a {
 }
 
 .btn-outline {
-  .btn-outline {
-  margin-top: auto; 
+  margin-top: auto;
   border: 2px solid #333;
   color: #333;
   padding: 0.6rem 1.2rem;
   border-radius: 30px;
   font-weight: bold;
   display: inline-block;
+  margin-top: 1rem;
 }
 
 .btn-outline:hover {
@@ -429,3 +430,4 @@ a {
   border-radius: 8px;
   cursor: pointer;
 }
+
